--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,6 +6,30 @@
 color: red;
 }
 
+.image-container {
+    position: relative;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .image-container.full-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .image-container.full-screen img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: fill;
+  }
+
+  
+
 /*dashboard*/
 .dashShell {
     display: flex;
@@ -29,7 +53,7 @@ color: red;
 .navBar {
     width: 30%;
     height: 100%;
-    border: .25rem solid black;
+    border: .75rem solid black;
     font-family: PersianSword;
     background-color: rgba(0, 0, 0, .4);
     color: white;
