--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,16 +3,20 @@
 }
 
 .homeLink {
-color: red;
+    color: red;
+    background-color: rgba(0, 0, 0, .5);
+    padding: .5%;
+    border: .1rem solid ghostwhite;
+    border-radius: 10%;
 }
 
 .image-container {
     position: relative;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
-  }
-  
-  .image-container.full-screen {
+}
+
+.image-container.full-screen {
     position: fixed;
     top: 0;
     left: 0;
@@ -20,15 +24,15 @@ color: red;
     height: 100%;
     z-index: 9999;
     background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .image-container.full-screen img {
+}
+
+.image-container.full-screen img {
     max-width: 100%;
     max-height: 100%;
     object-fit: fill;
-  }
+}
 
-  
+
 
 /*dashboard*/
 .dashShell {
@@ -36,6 +40,7 @@ color: red;
     padding: 5%;
     background-image: url(../images/JabbaBack.jpg);
     background-size: cover;
+    border: .5rem solid black;
 
 }
 
@@ -80,7 +85,7 @@ color: red;
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 100%; 
+    top: 100%;
     background-color: black;
     border: .25rem solid white;
 
@@ -95,7 +100,7 @@ color: red;
     /* This is important for positioning the dropdown menu */
     display: inline-block;
     /* Ensures the link and menu are inline */
-    
+
 }
 
 /* You may want to add additional styling for the link itself */
@@ -104,8 +109,8 @@ color: red;
     color: white;
     font-size: 1.5rem;
     font-family: PersianSword;
-   background-color: transparent;
-   text-shadow: .1rem .1rem red;
+    background-color: transparent;
+    text-shadow: .1rem .1rem red;
 }
 
 /* Additional styling for when the link is hovered */
@@ -236,7 +241,11 @@ color: red;
     background-size: cover;
 }
 
-.weaponShelf, .blaster, .sabre, .blade, .vambrance{
+.weaponShelf,
+.blaster,
+.sabre,
+.blade,
+.vambrance {
     border: .25rem solid black;
     padding: 2%;
     background-color: rgba(0, 0, 0, .5);
@@ -261,7 +270,8 @@ color: red;
     text-shadow: .1rem .1rem red;
 }
 
-.caseLeft, .caseRight {
+.caseLeft,
+.caseRight {
     width: 30%;
 }
 
@@ -270,7 +280,7 @@ color: red;
 }
 
 .caseMid {
-    width: 40%; 
+    width: 40%;
 }
 
 .blaster {
@@ -309,15 +319,19 @@ color: red;
     margin-top: 2%;
     padding-top: 2%;
 }
- .DNDesc {
+
+.DNDesc {
     font-family: QuickerMachine;
     font-size: 2.25rem;
     display: flex;
     justify-content: space-evenly;
- 
- }
 
-.shipPics, .shipPics2, .shipPics3, .shipPics4 {
+}
+
+.shipPics,
+.shipPics2,
+.shipPics3,
+.shipPics4 {
     border: .25rem solid black;
     box-shadow: .1rem .1rem red;
 }
@@ -349,13 +363,13 @@ color: red;
     font-family: QuickerMachine;
     background-size: cover;
     color: ghostwhite;
-    
+
 }
 
 .AMLeft {
     font-size: 2rem;
     margin: 2%;
-    border: .25rem solid black;
+    border: .1rem solid ghostwhite;
     padding: 2%;
     background-color: rgba(0, 0, 0, .7);
     text-shadow: .05rem .05rem red;
@@ -368,9 +382,14 @@ color: red;
 
 .homeLink2 {
     color: red;
-    font-size: 1rem;   
+    font-size: 1rem;
     font-family: PersianSword;
     text-decoration: none;
+    background-color: rgba(0, 0, 0, .5);
+    padding: .5%;
+    border: .1rem solid ghostwhite;
+    border-radius: 10%;
+    text-shadow: .05rem .05rem ghostwhite;
 }
 
 /*droids*/
@@ -383,7 +402,7 @@ color: red;
     color: ghostwhite;
     font-size: 2.1rem;
     padding: 2%;
-   
+
 }
 
 .droidText {
@@ -391,6 +410,7 @@ color: red;
     background-color: rgba(0, 0, 0, .5);
     text-shadow: .1rem .1rem red;
 }
+
 .droidBox {
     display: flex;
     border: .25rem solid red;
@@ -438,4 +458,104 @@ color: red;
     box-shadow: .1rem .1rem red;
     width: 30rem;
     height: 40rem;
+}
+
+/*services*/
+.servShell {
+    width: auto;
+    height: 100vh;
+    border: 1rem black solid;
+    background-image: url(../images/coruscant_day.jpg);
+    background-size: cover;
+}
+
+.servTitle {
+    color: ghostwhite;
+    text-shadow: .1rem .1rem red;
+    font-size: 4rem;
+}
+
+.servHomeLink {
+    color: red;
+    background-color: rgba(0, 0, 0, .5);
+    padding: .5%;
+    border: .1rem solid ghostwhite;
+    border-radius: 10%;
+    text-decoration: none;
+    text-shadow: .05rem .05rem ghostwhite;
+}
+
+.servPara {
+    font-family: QuickerMachine;
+    font-size: 3rem;
+    font-style: italic;
+    color: ghostwhite;
+    text-shadow: .1rem .1rem red;
+    border: .1rem solid ghostwhite;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.servBox {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2%;
+}
+
+.servLink {
+    color: ghostwhite;
+    text-shadow: .1rem .1rem red;
+    text-decoration: none;
+    font-size: 3rem;
+}
+
+/*acquisitions, deliveries, removals*/
+.Shells {
+    width: auto;
+    height: auto;
+    border: 1rem black solid;
+    background-image: url(../images/3heads.jpg);
+    background-size: 100%;
+}
+
+.shellTitle {
+    text-shadow: .1rem .1rem red;
+    font-size: 4rem;
+}
+
+.shellHomeLink {
+    color: red;
+    background-color: rgba(0, 0, 0, .5);
+    padding: .5%;
+    border: .1rem solid black;
+    border-radius: 10%;
+    text-decoration: none;
+    text-shadow: .05rem .05rem ghostwhite;
+}
+
+.shellBox {
+    font-family: QuickerMachine;
+    font-size: 3rem;
+    display: flex;
+    justify-content: space-around;
+    color: ghostwhite;
+    text-shadow: .05rem .05rem red;
+    background-color: rgba(0, 0, 0, .5);
+    border: .1rem solid black;
+    margin: 5%;
+}
+
+.shellCred {
+    width: 5rem;
+    height: 5rem;
+    color: ghostwhite;
+    text-shadow: .1rem .1rem ghostwhite;
+}
+
+.li {
+    font-size: 2.5rem;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
 }
