--- a/src/components/style.css
+++ b/src/components/style.css
@@ -40,7 +40,7 @@
     padding: 5%;
     background-image: url(../images/JabbaBack.jpg);
     background-size: cover;
-    border: .5rem solid black;
+    border: 1rem groove black;
 
 }
 
@@ -48,7 +48,7 @@
     font-family: QuickerMachine;
     font-size: 6rem;
     text-shadow: .1rem .1rem red;
-    border: .25rem solid black;
+    border: .25rem groove black;
     width: 55%;
     margin-left: 22%;
     box-shadow: .1rem .1rem red;
@@ -58,7 +58,7 @@
 .navBar {
     width: 30%;
     height: 100%;
-    border: .75rem solid black;
+    border: .75rem groove black;
     font-family: PersianSword;
     background-color: rgba(0, 0, 0, .4);
     color: white;
@@ -78,8 +78,8 @@
 }
 
 .MythPic {
-    border: red .25rem solid;
-    box-shadow: .1rem .1rem black;
+    border: black .25rem groove;
+    box-shadow: .1rem .1rem red;
 }
 
 .dropdown-menu {
@@ -97,13 +97,10 @@
 
 .dropdown-link {
     position: relative;
-    /* This is important for positioning the dropdown menu */
     display: inline-block;
-    /* Ensures the link and menu are inline */
 
 }
 
-/* You may want to add additional styling for the link itself */
 .dropdown-link a {
     text-decoration: none;
     color: white;
@@ -113,10 +110,8 @@
     text-shadow: .1rem .1rem red;
 }
 
-/* Additional styling for when the link is hovered */
 .dropdown-link:hover {
     color: black;
-    /* Add any hover-specific styles here, e.g., background color or text color */
 }
 
 
@@ -236,7 +231,7 @@
 
 /*weapons*/
 .weaponShell {
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/MetalBack.jpg);
     background-size: cover;
 }
@@ -257,13 +252,9 @@
     margin-bottom: 5%;
 }
 
-.homeLink {
-    text-decoration: none;
-    font-size: 1rem;
-}
 
 .weaponCase {
-    border: 1rem black solid;
+    border: 1rem black groove;
     display: flex;
     justify-content: space-evenly;
     box-shadow: 1rem 1rem black;
@@ -307,14 +298,14 @@
 
 /*Dark Naught*/
 .DNShell {
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/MetalBack.jpg);
     background-size: cover;
 }
 
 .DNCase {
     display: flex;
-    border: 1rem black solid;
+    border: 1rem black groove;
     justify-content: space-around;
     margin-top: 2%;
     padding-top: 2%;
@@ -325,6 +316,7 @@
     font-size: 2.25rem;
     display: flex;
     justify-content: space-evenly;
+    text-shadow: .02rem .1rem red;
 
 }
 
@@ -332,7 +324,7 @@
 .shipPics2,
 .shipPics3,
 .shipPics4 {
-    border: .25rem solid black;
+    border: .5rem groove black;
     box-shadow: .1rem .1rem red;
 }
 
@@ -358,7 +350,7 @@
 
 /*Lineage*/
 .AMShell {
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/SWLandscape.jpg);
     font-family: QuickerMachine;
     background-size: cover;
@@ -369,7 +361,7 @@
 .AMLeft {
     font-size: 2rem;
     margin: 2%;
-    border: .1rem solid ghostwhite;
+    border: .5rem groove black;
     padding: 2%;
     background-color: rgba(0, 0, 0, .7);
     text-shadow: .05rem .05rem red;
@@ -389,13 +381,13 @@
     padding: .5%;
     border: .1rem solid ghostwhite;
     border-radius: 10%;
-    text-shadow: .05rem .05rem ghostwhite;
+    text-shadow: .05rem .05rem black;
 }
 
 /*droids*/
 .droidShell {
     position: static;
-    border: 1rem black solid;
+    border: 1rem black groove;
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/SWDroids.jpg);
     font-family: QuickerMachine;
     background-size: 100%;
@@ -406,14 +398,14 @@
 }
 
 .droidText {
-    border: .25rem solid black;
+    border: .25rem groove black;
     background-color: rgba(0, 0, 0, .5);
     text-shadow: .1rem .1rem red;
 }
 
 .droidBox {
     display: flex;
-    border: .25rem solid red;
+    border: .5rem groove red;
     padding: 2%;
     background-color: rgba(0, 0, 0, .8);
     text-shadow: .1rem .1rem red;
@@ -427,7 +419,7 @@
 /*affiliations*/
 .affShell {
     position: static;
-    border: 1rem black solid;
+    border: 1rem black groove;
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../images/coruscant-night.jpg);
     font-family: QuickerMachine;
     background-size: 100%;
@@ -448,13 +440,13 @@
 
 /*bounties*/
 .BShell {
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/burning.png);
     background-size: cover;
 }
 
 .poster {
-    border: .25rem solid black;
+    border: .5rem groove black;
     box-shadow: .1rem .1rem red;
     width: 30rem;
     height: 40rem;
@@ -464,7 +456,7 @@
 .servShell {
     width: auto;
     height: 100vh;
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/coruscant_day.jpg);
     background-size: cover;
 }
@@ -506,13 +498,16 @@
     text-shadow: .1rem .1rem red;
     text-decoration: none;
     font-size: 3rem;
+    border: .1rem solid ghostwhite;
+    background-color: rgba(0, 0, 0, .5);
+    padding: 1%;
 }
 
 /*acquisitions, deliveries, removals*/
 .Shells {
     width: auto;
     height: auto;
-    border: 1rem black solid;
+    border: 1rem black groove;
     background-image: url(../images/3heads.jpg);
     background-size: 100%;
 }
@@ -529,7 +524,7 @@
     border: .1rem solid black;
     border-radius: 10%;
     text-decoration: none;
-    text-shadow: .05rem .05rem ghostwhite;
+    text-shadow: .05rem .05rem black;
 }
 
 .shellBox {
